--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,14 @@
-* {
+h1,h2,h3 {
     text-align: center;
 }
 
 .option-button {
+    border: black solid 2px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.disabled {
     border: black solid 2px;
     margin-top: 20px;
     margin-bottom: 10px;
