--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,15 +8,6 @@ body {
     background-size: cover;
 }
 
-#game-board {
-    background-image: url("http://www.joshsfrogs.com/catalog/blog/wp-content/uploads/moss-vivarium-small-red-frog.jpg");
-    background-size: cover;
-}
-
-#game-board {
-    margin-bottom: 20px;
-}
-
 .option-button {
     border: black solid 2px;
     margin-top: 20px;
@@ -27,4 +18,21 @@ body {
     border: black solid 2px;
     margin-top: 20px;
     margin-bottom: 10px;
+}
+
+.question {
+    background-color: azure;
+}
+
+#header, #results {
+    background-color: aquamarine;
+}
+
+#game-board {
+    margin-bottom: 20px;
+}
+
+#game-board {
+    background-image: url("http://www.joshsfrogs.com/catalog/blog/wp-content/uploads/moss-vivarium-small-red-frog.jpg");
+    background-size: cover;
 }
